mejorando la pagina

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1>Este es un sitio web con Github Pages</h1>
-<p>fue creado con esfuerzo por Daniel Garcia</p>
-<p><img src="https://i.pinimg.com/originals/10/5a/fd/105afda588d9fad6fcceaef564f5eef7.gif" /></p>
-<p>Camilo es una pelota</p>
+<H1 align="center"> Cómo Tallar la Madera </H1>
+<body bgcolor="blue">
+
+</body>
+<p align="center"><img src="https://i.pinimg.com/originals/10/5a/fd/105afda588d9fad6fcceaef564f5eef7.gif" /></p>
+
