--- a/index.html
+++ b/index.html
@@ -1,6 +1,119 @@
-<H1 align="center"> REDPORTURISMOTOURS S.A.S </H1>
-<body bgcolor="blue">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RedPorturismoTours S.A.S</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+            margin: 1rem 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #333;
+            text-decoration: none;
+        }
+        section {
+            padding: 2rem;
+        }
+        .section-title {
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        /* Estilo para la galería de imágenes */
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 10px;
+            justify-items: center;
+        }
+        .gallery img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>RedPorturismoTours S.A.S</h1>
+</header>
+
+<nav>
+    <a href="#fotos">Fotos</a>
+    <a href="#paquetes">Paquetes Turísticos</a>
+    <a href="#contacto">Contacto</a>
+    <a href="#redes">Redes Sociales</a>
+</nav>
+
+<section id="fotos">
+    <h2 class="section-title">Fotos</h2>
+    <div class="gallery">
+        <img src="Fotos/1.jpeg" alt="Foto de viaje 1">
+        <img src="Fotos/2.jpeg" alt="Foto de viaje 2">
+        <img src="Fotos/3.jpeg" alt="Foto de viaje 3">
+        <img src="Fotos/4.jpeg" alt="Foto de viaje 4">
+        <img src="Fotos/5.jpeg" alt="Foto de viaje 5">
+        <img src="Fotos/6.jpeg" alt="Foto de viaje 6">
+        <img src="Fotos/7.jpeg" alt="Foto de viaje 7">
+        <img src="Fotos/8.jpeg" alt="Foto de viaje 8">
+        <img src="Fotos/9.jpeg" alt="Foto de viaje 8">
+        <img src="Fotos/10.jpeg" alt="Foto de viaje 8">
+    </div>
+</section>
+
+<section id="paquetes">
+    <h2 class="section-title">Paquetes Turísticos</h2>
+    <div>
+        <h3>Paquete 1: Aventura en la Montaña</h3>
+        <p>Incluye caminatas guiadas, alojamiento y transporte.</p>
+        <h3>Paquete 2: Relax en la Playa</h3>
+        <p>Disfruta de un fin de semana en las mejores playas.</p>
+    </div>
+</section>
+
+<section id="contacto">
+    <h2 class="section-title">Contacto</h2>
+    <p>Teléfono: +57 3142814787</p>
+    <p>Email: redporturismotourscucuta@gmail.com</p>
+</section>
+
+<section id="redes">
+    <h2 class="section-title">Redes Sociales</h2>
+    <p>Síguenos en nuestras redes sociales:</p>
+    <p>
+        <a href="https://facebook.com">Facebook</a> | 
+        <a href="https://instagram.com">Instagram</a> | 
+        <a href="https://twitter.com">Twitter</a>
+    </p>
+</section>
+
+<footer>
+    <p>&copy; 2024 RedPorturismoTours S.A.S - Todos los derechos reservados.</p>
+</footer>
 
 </body>
-
-
+</html>
